--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -9,6 +9,16 @@
     <%= render "_favicon.html" %>
 
     <title>InSTEDD Surveda</title>
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:<%= Application.get_env(:hotjar, :tracking_id) %>,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
     <script>
       window.mixEnv = "<%= Mix.env %>"
