--- a/web/templates/mobile_survey/index.html.eex
+++ b/web/templates/mobile_survey/index.html.eex
@@ -2,7 +2,7 @@
   <div id="root" role="main" data-config="<%= Poison.encode!(%{introMessage: @mobile_web_intro_message, colorStyle: @color_style}) %>"></div>
   <script>
     window.mixEnv = "<%= Mix.env %>"
-    window.respondentId = <%= @respondent_id %>
+    window.respondentId = "<%= @respondent_id %>"
     window.token = "<%= @token %>"
   </script>
   <script src="<%= static_path(@conn, "/js/mobileSurvey.js") %>"></script>
